--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,11 +2,17 @@ cmake_minimum_required(VERSION 3.14)
 project(freemap)
 
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
+set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
 
 # GoogleTest requires at least C++14
 set(CMAKE_CXX_STANDARD 14)
 
 include(FetchContent)
+include_directories(
+  ${CMAKE_BINARY_DIR}/src
+  ${CMAKE_BINARY_DIR}/lib
+)
+
 FetchContent_Declare(
   googletest
   URL https://github.com/google/googletest/archive/03597a01ee50ed33e9dfd640b249b4be3799d395.zip
@@ -15,16 +21,23 @@ FetchContent_Declare(
 set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
 FetchContent_MakeAvailable(googletest)
 
+add_library(
+  freemap
+  src/freemap.c
+)
+
 enable_testing()
 
 add_executable(
-  hello_test
-  test/hello_test.cc
+  freemap_test
+  test/freemap_test.cc
 )
 target_link_libraries(
-  hello_test
+  freemap_test
   GTest::gtest_main
+  freemap
 )
 
 include(GoogleTest)
-gtest_discover_tests(hello_test)
+gtest_discover_tests(freemap_test)
+
